setup/6-Auth/deployment.yaml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: traefik-forward-auth
  namespace: infra
  labels:
    app: traefik-forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-forward-auth
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      containers:
      - name: traefik-forward-auth
        image: lbischof/traefik-forward-auth
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 4181
            name: http
            protocol: TCP
